add: footer section

--- a/index.html
+++ b/index.html
@@ -76,9 +76,48 @@
                     <h2 class="plan-container-title">ecommerce</h2>
                     <p class="plan-description">I want to develop</p>
                 </div>
-        
             </div>
         </section>
+        <section class="call-info">
+           <div class="col-info-item">
+            <h1 class="call-info-section-title">
+                Awlays keep a positive mindset
+            </h1>
+
+            <button class="btn-call-info">Call Now</button>
+           </div>
+        </section>
+        <!--Footer section-->
+        <footer class="footer-section">
+            <div class="footer-item">
+                <div class="footer-info">
+                    <h1 class="footer-title">Future</h1>
+                    <p class="footer-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+                    <p class="footer-description">Email : info@gmail.com</p>
+                    <p class="footer-description">Phone : 01500 00 00 00</p>
+                    <div class="icon">
+                        <a href="">
+                            <img src="images/icons/fb.png" alt="">
+                        </a>
+                        <a href="">
+                            <img src="images/icons/twitter.png" alt="">
+                        </a>
+                        <a href="">
+                            <img src="images/icons/youtube.png" alt="">
+                        </a>
+                    </div>
+                </div>
+                <div class="contact">
+                    <h3 class="contact-title">
+                        Subscribe
+                    </h3>
+                    <form action="">
+                        <input type="email" placeholder="Enter your email">
+                    </form>
+                    <button class="btn-call-info">Subscribe</button>
+                </div>
+            </div>
+        </footer>
     </main>
   </body>
 </html>
