add: about me section

--- a/index.html
+++ b/index.html
@@ -79,13 +79,23 @@
             </div>
         </section>
         <section class="call-info">
-           <div class="col-info-item">
+           <div class="call-info-item">
             <h1 class="call-info-section-title">
                 Awlays keep a positive mindset
             </h1>
 
             <button class="btn-call-info">Call Now</button>
            </div>
+        </section>
+        <!--about me section-->
+        <section class="about">
+            <h2 class="plan-section-title">
+                About Me
+            </h2>
+            <div class="profile-card">
+                <img src="/images/riadd.jpg" alt="">
+                <p><q>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit aut perspiciatis fuga aliquam sed. Quod, odio! Iusto rerum aut deleniti deserunt nobis tempore natus laboriosam voluptatem ullam sint, maxime in, corporis quis eligendi voluptas consequatur! Harum voluptates et reprehenderit debitis, tenetur modi nobis, dolorem, tempore sed repudiandae consectetur earum. Veniam quam, rerum aliquam exercitationem delectus impedit est officiis similique architecto!</q></p>
+            </div>
         </section>
         <!--Footer section-->
         <footer class="footer-section">
