image path change

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 About Me
             </h2>
             <div class="profile-card">
-                <img src="/images/riadd.jpg" alt="">
+                <img src="./images/riadd.jpg" alt="">
                 <p><q>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit aut perspiciatis fuga aliquam sed. Quod, odio! Iusto rerum aut deleniti deserunt nobis tempore natus laboriosam voluptatem ullam sint, maxime in, corporis quis eligendi voluptas consequatur! Harum voluptates et reprehenderit debitis, tenetur modi nobis, dolorem, tempore sed repudiandae consectetur earum. Veniam quam, rerum aliquam exercitationem delectus impedit est officiis similique architecto!</q></p>
             </div>
         </section>
